# argus-research-bot

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bench/: README.md  __init__.py  queries.jsonl  runner.py  scorer.py
demo_output/: demo_transcript.json
demo_output/20260707_193842_LLM_agent_benchmarks_and_primary-source_evaluation/: _render_pdf.py  metadata.json  report.md
docs/: help.md  research-engine-v3.md
scripts/: demo_run.py  run.sh  run_demo.sh  run_tests.sh  verify_live.sh
src/argus/: bot.py  (+12 more)
tests/: manual_e2e.py  test_bench_scorer.py  test_bot.py  test_bot_markdown_fallback.py  test_brief.py  test_cache_cleanup.py  test_citations.py  test_compose_headings.py  test_config_tools.py  test_continue_extend.py  test_credibility.py  test_delete_browser.py  test_e2e_research.py  test_extend.py  test_graph.py  test_grounded_gate.py  test_grounding.py  test_hitl_edit_revise.py  test_library.py  test_llm.py  test_llm_retry.py  test_media.py  test_media_bot.py  test_orphan_reconcile.py  test_pdf_render.py  test_plan_hitl_gating.py  test_planner_no_hallucinated_urls.py  test_planner_reflect.py  test_post_synthesis.py  test_quarantine.py  test_reflexion.py  test_research_depth.py  test_researcher_subgraph.py  test_run_scoping.py  test_search_providers.py  test_sources_block.py  test_synth_parse_robust.py  test_tools_routing_and_errors.py  test_tools_truth.py  test_transcribe.py  (+3 more)
tonight/: HANDOFF-2026-07-08-AIQ-FIXES.md  HANDOFF-2026-07-09-DESKTOP.md  HANDOFF-2026-07-09-QUALITY.md  HANDOFF-2026-07-09-TRANSCRIPTS.md
(+65 files in other folders)
