[project]
name = "argus"
version = "0.1.0"
description = "Argus — FreeLLMAPI multi-agent Telegram research bot (LangGraph)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20",
    "python-telegram-bot[ext]>=21.6",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "markdown>=3.6",
    "tenacity>=8.2",
    "reportlab>=4.0",
    "ddgs>=9.0",
    "yt-dlp>=2026.6",
    "imageio-ffmpeg>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
asr = [
    "faster-whisper>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]